Code & pom file updated to 3.1.1