@@ -1,6 +1,6 @@
 /**
- * Sencha GXT 3.0.1 - Sencha for GWT
- * Copyright(c) 2007-2012, Sencha, Inc.
+ * Sencha GXT 3.1.1 - Sencha for GWT
+ * Copyright(c) 2007-2014, Sencha, Inc.
  * licensing@sencha.com
  *
  * http://www.sencha.com/products/gxt/license/
@@ -14,7 +14,7 @@ public class BooleanFilterHandler extends FilterHandler<Boolean> {
 
   @Override
   public Boolean convertToObject(String value) {
-    return new Boolean(value);
+    return Boolean.valueOf(value);
   }
 
   @Override
